--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caffeine - The Art of Perfect Coffee</title>
     <!-- Note: You might want to add an icon library like Font Awesome for search and arrow icons -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
